arrumado criptografia e base64

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,5 @@ idf_component_register(SRCS "reia-embedded.c"
                     INCLUDE_DIRS "."
                     EMBED_TXTFILES  "cert/ssl/ca.crt"
                                     "cert/rsa/public.pem"
+                                    "cert/rsa/private.pem"
                     )
